static/css/submissions.css
:root {
  --blue: #5e72e4;
  --indigo: #5603ad;
  --purple: #8965e0;
  --pink: #f3a4b5;
  --red: #f5365c;
  --orange: #fb6340;
  --yellow: #ffd600;
  --green: #2dce89;
  --teal: #11cdef;
  --cyan: #2bffc6;
  --white: #fff;
  --gray: #8898aa;
  --gray-dark: #32325d;
  --light: #d4ceda; /* ced4da */
  --lighter: #ece9ef; /* e9ecef */
  --bg: #f9f6fc; /* f6f9fc*/
  --primary: #370D73; /* --blue */
  --secondary: #f5f4f7; /* f4f5f7 */
  /* mejai colors */
  --mejai-pink: #BF264F;
  --mejai-violet: #631FA6;
  --mejai-purple: #370D73;
  --mejai-navy: #150140;
  --mejai-yellow: #F2DEA0;
  
  --success: #2dce89;
  --info: #11cdef;
  --warning: #fb6340;
  --danger: #f5365c;
  --light: #adb5bd;
  --dark: #212529;
  --default: #172b4d;
  --white: #fff;
  --neutral: #fff;
  --darker: black;
  --breakpoint-xs: 0;
  --breakpoint-sm: 576px;
  --breakpoint-md: 768px;
  --breakpoint-lg: 992px;
  --breakpoint-xl: 1200px;
  --font-family-sans-serif: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
  --font-family-monospace: SFMono-Regular, Menlo, Monaco, Consolas, "Liberation Mono", "Courier New", monospace;
}
.accepted-submission, .rejected-submission, .no-submission {
	font-weight: bold;
	text-align: center;
	margin: auto;
}
.rejected-submission {
	color: #f5365c !important;
}
.accepted-submission {
	color: #1f8f5f !important;
}
.no-submission {
	color: var(--lighter) !important;
}
.participantPRACTICE, .participantCONTESTANT, .participantOUT_OF_COMPETITION, .participantVIRTUAL {
  text-align: center;
}
.participantOUT_OF_COMPETITION, .participantVIRTUAL
{
	color: var(--blue);
}
.participantCONTESTANT
{
	color: var(--mejai-navy);
}
.participantPRACTICE
{
  color: var(--gray);
}
.participant_notation{
  font-weight:700;
  font-size: 70% !important;
  font-family:helvetica neue,Helvetica,Arial,sans-serif;text-decoration:none!important;
}
@media (max-width: 576px) {
  .participant_notation {
    display: none;
  }
}
.problem-accepted, .problem-rejected, .problem-no, .problem-accepted-upsolve, .card-cell, .width-7 {
  width: 7%;
}
.width-5 {
  width: 5%;
}
.width-6 {
  width: 6%;
}
.width-10 {
  width: 10%;
}
.card-name {
  width: 20%;
}
.card-contest-name {
  width: 25%;
  overflow: hidden;
}
.rank {
  font-family:helvetica neue,Helvetica,Arial,sans-serif;
  text-decoration:none!important;
  white-space: nowrap;
  font-size: 90%;
}

@media (max-width: 1200px) {
  .rank {
    font-size: 70%;
  }
}
@media (max-width: 1200px) {
  .rank {
    font-size: 70%;
  }
}
@media (max-width: 920px) {
  .rank {
    font-size: 60%;
  }
}
@media (max-width: 768px) {
  .rank {
    font-size: 50%;
  }
}
.problem-accepted, .problem-rejected, .problem-no, .problem-accepted-upsolve
{
/*  border: 0.0625rem solid rgba(0, 0, 0, 0.125); */
	padding:0px 0px;
  border-radius: 0 !important;
  box-shadow: none;
}
/*
.problem-accepted:hover, .problem-rejected:hover, .problem-no:hover, .problem-accepted-upsolve:hover{
	filter: brightness(97%);
}
*/
.problem-accepted {
	background-color: #d4edc9 !important;
}
.problem-accepted-upsolve {
	background: linear-gradient(
    315deg,
    var(--mejai-yellow) 0%,
    var(--mejai-yellow) 20%,
    #d4edc9 20%,
    #d4edc9 100%
  );}
.problem-rejected {
	background-color: #ffe3e3 !important;
}
.problem-no {
	background-color: var(--secondary) !important;
}
.problem-index {
  width: 100%;
  text-align: center;
  margin: auto;
  padding: 5px;
  border-radius: 0;
}
.text-normal {
  font-weight: 500 !important;
}
.contest-holder {
	background-color: #ffffff !important;
  box-shadow: none;
  border: none;
  border-radius: 0 !important;
}
.contest-name {
  width: 100%;
  height: 100%;
  padding: 5px;
  margin:auto;
  border-radius: 0;
  text-align: left;
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
}
.AK {
	background-color: #d4edc9 !important;
}
.OPEN {
	background-color: rgb(221, 238, 255) !important;
}
.RJ {
	background-color: #ffe3e3 !important;
}
.NEW {
	background-color: var(--secondary) !important;
}
.card-participant {
	background-color: #fff9ff;
  padding:0px 0px;
  flex-direction: row;
}
.card-concered {
	background-color: var(--mejai-yellow) !important;
}
.card-name, .card-cell {
	background-color: rgba(255, 255, 255, 0.5);
/*	border: 0.0625rem solid rgba(0, 0, 0, 0.05); */
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
}
.card-name {
  padding:0px 5px;
  text-align: left;
  display:inline;
  vertical-align: middle;
}
.card-cell {
  padding:0px 0px;
  text-align: center;
}
.card-contest-name {
  padding:0px 0px;
}
table.fixed { table-layout:fixed; }
a {
  font-family:helvetica neue,Helvetica,Arial,sans-serif;
  text-decoration:none!important;
}
.td-problem {
  padding: 0.3rem !important;
  margin: 0.3rem !important;
  vertical-align: center;
  white-space: nowrap;
  font-size: 1rem;
  background-color: white;
  font-family: verdana,arial,sans-serif;
  overflow: visible;
}
.mono {
  font-family: monospace;
}
.supsub {
  position: absolute;
  font-size: 0.8rem;
}
.superscript {font-weight: normal; display:block; position:relative; left:.1rem; top: -.3rem}
.subscript {display:block; position:relative; left:.1rem; top: -.5rem}


.text-gray {
  color: #958a9a !important;
}

a.text-gray:hover,
a.text-gray:focus {
  color: #47414e !important;
}

